# Python_RESTful_API_Using_Django_REST_Project_9

./: .gitignore  README.md  db.sqlite3  openapi.yaml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: lint.yml  release-drafter.yml  release.yml
config/: settings.py  urls.py
softdeskapp/: admin.py  tests.py  urls.py
softdeskapp/migrations/: 0001_initial.py
softdeskapp/models/: __init__.py  comment_models.py  contributor_models.py  issue_models.py  project_models.py  users_models.py
softdeskapp/permissions/: __init__.py  comment_permissions.py  issue_permissions.py  project_permissions.py
softdeskapp/serializers/: __init__.py  comment_serializers.py  contributor_serializers.py  issue_serializers.py  project_serializers.py  signup_serializers.py  user_serializers.py
softdeskapp/views/: __init__.py  account_views.py  comment_viewset.py  contributor_viewset.py  helper.py  issue_viewset.py  project_viewset.py
